# gomoku-ai

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  PROJECT_STATUS.md  README.md  RUNPOD.md  TRAINING_RUN_SUMMARY.md  and fix critical value propagation"qqqqqq  pyproject.toml  requirements.txt
benchmarks/: bench_batched_eval.py
docs/: architecture.md  audit-tacticalsolver.md  distributed.md  nn-architecture-upgrades.md
docs/architecture/: search_architecture.md
docs/superpowers/: strength-scaling-results-2026-05-28.md  strength-scaling-review-2026-05-27.md
engine/: board.py  encoding.py  tactical.py  threats.py
explain/: __init__.py  activations.py  comparison.py  saliency.py
neural/: __init__.py  model.py  wrapper.py
selfplay/: __init__.py  bench_suite.py  benchmark.py  config.py  elo.py  eval_registry.py  evaluator.py  mcts.py  move_ordering.py  profiler.py  replay_buffer.py  selfplay.py  train.py  worker.py
tests/: test_activations.py  test_bench_suite.py  test_board.py  test_comparison.py  test_elo.py  test_encoding.py  test_eval_registry.py  test_fresh_start.py  test_mcts.py  test_move_ordering.py  test_move_ordering_benchmark.py  test_neural.py  test_saliency.py  test_selfplay.py  test_server.py  test_tactical.py  test_tactical_benchmark.py  test_threats.py  test_train.py  test_tree_reuse_benchmark.py  test_worker.py  test_zobrist_cache.py
tools/: bench_nn_architecture.py  bench_selfplay_quality.py  benchmark_runner.py  regression_test.py  report.py  validate_tactical.py
ui/: server.py
ui/static/: app.js  index.html  style.css
(+16 files in other folders)
