[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-gomoku"
version = "1.0.0"
description = "Deep neural network engine for Gomoku combining MCTS with PyTorch"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-timeout>=2",
]

[tool.setuptools.packages.find]
include = ["engine*", "neural*", "selfplay*", "ui*", "tools*", "explain*"]
